# multimodel-document-converter

./: .clinerules  .flake8  .gitignore  AGENTS.md  AGENT_GUIDANCE_EVOLUTION.md  AGENT_GUIDANCE_MANAGEMENT.md  CHANGELOG.md  CLAUDE.md  GAP_3_DYNAMIC_SEMANTIC_OVERLAP_IMPLEMENTATION.md  GAP_4_TOKEN_VALIDATOR_IMPLEMENTATION.md  GEMINI_AUDIT_RESPONSE.md  Makefile  README.md  RETRIEVAL_OPTIMIZATION_SUMMARY.md  SCANNED_DOCUMENT_IMPROVEMENT_PLAN.md  SRS_2.3_COMPLIANCE_REPORT.md  SRS_Multimodal_Ingestion_V2.3.md  Uitgebreide Analyse & PVA nl.md  environment.yml  pyproject.toml  requirements.txt
docs/: ACCEPTANCE_ORDER_PROMPT.md  AGENT_BRIEF.md  AGENT_GOVERNANCE.md  ARCHITECTURE.md  ARCHITECTURE_V2_ANTI_OVERFITTING.md  BUG_REPORT_PARITY_PROFILE_MISMATCH.md  CLAUDE_PROMPT_QUALITY.md  CLAUDE_PROMPT_REFACTOR_BOUNDARY_WORK.md  CONTEXTUAL_RETRIEVAL_PROMPT.md  CONVERSION_PROFILES.md  Comprehensive Analysis.md  DECISIONS.md  DECISION_OCR_CASCADE.md  FIX_ACADEMIC_WHITEPAPER_CLASSIFICATION.md  FIX_TABLE_ASSET_REF_QA_CHECK_05.md  IMPLEMENTATION_ACADEMIC_WHITEPAPER_V2.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_ACADEMIC_WHITEPAPER_V2.md  Optimal document conversion settings.md  PHASE_5_DEVLIN_HEADING_DIAGNOSTIC.md  PHASE_6_FIREARMS_OCR_HEADING_DIAGNOSTIC.md  PHASE_A_MISSING_PAGES_DIAGNOSTIC.md  PHASE_B3_CROSS_PAGE_SPLIT_DIAGNOSTIC.md  PLAN_DOCLING_POSTPROCESSOR.md  PLAN_HYBRID_CHUNKER_MIGRATION.md  PLAN_V2.10.md  PLAN_V2.11.md  PLAN_V2.12.md  PLAN_V2.7_DOCUMENT_UNDERSTANDING.md  PLAN_V2.8_PRODUCTION_GAPS.md  PLAN_V2.9.md  PLAN_V2.9_DRAFT_PROMPT.md  PLAN_V2.9__PHASE4.md  PLAN_V2.9__STEP3.md  PROGRESS_CHECKLIST.md  PROJECT_STATUS.md  QUALITY_ARCHITECTURE_AUDIT.md  QUALITY_GATES.md  QUALITY_SNAPSHOT_2026-04-29.md  QUALITY_SNAPSHOT_2026-04-30.md  (+21 more)
examples/: advanced_rag_usage.py
scripts/: README_search.md  acceptance_technical_manual.sh  convert_all.sh  convert_books.sh  convert_books_v29.py  convert_technical_manual_full.sh  enrich_firearms_pending_only.py  enrich_image_chunks_v29.py  enrich_vlm.py  eval_vlm_image_prompt.py  evaluate_technical_manual_gates.py  fix_infix_numbering_jsonl.py  ingest_to_qdrant.py  measure_reranker_latency.py  probe_phase2_scout_threshold.py  qa_conversion_audit.py  qa_full_conversion.py  qa_ingestion_hygiene.py  qa_semantic_fidelity.py  qa_universal_invariants.py  rebuild_mmrag_v2_8_for_rc1.py  regression_technical_manual.sh  retrieval_regression.py  run_full_regression_qwen.py  run_strict_gate_corpus.py  run_technical_manual_exact.sh  search_qdrant.py  smoke_multiprofile.sh  smoke_technical_manual.sh  synthetic_soak.py  test_layout_aware_ocr.py  trace_ayeva_index_pipeline.py  trace_hao_p5_pipeline.py  v28_build_after_snapshot.py  v28_overnight_pipeline.sh  validate_qdrant.py  vlm_quality_summary.py
tests/: benchmark_ocr_cascade_sequences.py  docling_layout_results.json  firearms_quick_test.py  minimal_docling_test.py  processing_time_results.json  quick_docling_test.py  tesseract_baseline_results.json  test-OpenAI-endpoint.py  test_asset_complexity.py  test_blank_asset_quarantine.py  test_chunk_corruption_filter.py  test_chunk_id_collision_v29.py  test_chunker_guard.py  test_classifier_digital_literature.py  test_classifier_fallback.py  test_classifier_firearms_route.py  test_classifier_rule_0c_tightening.py  test_cli_refiner_smart_routing.py  test_code_chunking.py  test_code_enrichment_decision.py  test_contextual_retrieval.py  (+66 more)
(+113 files in other folders)
